[package]
name = "domainfo"
version = "0.1.1"
edition = "2021"
authors = ["Luke Spademan <info@lukespademan.com>"]
repository = "https://github.com/mokytis/domainfo"
license = "MIT"
description = "Get information about domains and its IP Addresses"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

trust-dns-client = "0.20.3"
